Reduce height of issue board input to align with buttons

--- a/app/assets/stylesheets/framework/filters.scss
+++ b/app/assets/stylesheets/framework/filters.scss
@@ -218,7 +218,7 @@
     min-width: 200px;
     padding-right: 25px;
     padding-left: 0;
-    height: $input-height;
+    height: $input-height - 2;
     line-height: inherit;
     border-color: transparent;
 
